# prompt-meter

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/promptmeter/: __init__.py  cli.py  config.py  events.py  metrics.py  pricing.py  redaction.py  shipper.py
src/promptmeter/contrib/: claude_hook.py
src/promptmeter/providers/: __init__.py  base.py  claude_code.py  copilot.py  hermes.py
